<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sharebtn"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/openbrowser"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/Open_Browser"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/printwebview"
        android:icon="@drawable/ic_baseline_print_24"
        android:title="@string/print"
        android:orderInCategory="100"
        app:showAsAction="always" />

</menu>