<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/backbutton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/AboutUs">

            </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:id="@+id/teamname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/TeamName"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/MemberList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Member"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/MemberName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/Notes"
            android:textAlignment="center" />

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>