<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="40dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="70dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".activity.MainActivity">
    <View
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/title_add_rss"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/AddSource"
        android:textAlignment="center"
        android:textSize="25sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="Chọn chủ đề"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/NameRequired"
                android:importantForAutofill="no"
                android:inputType="textLongMessage|text"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/spinner_rss"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/URLRequired"
                android:importantForAutofill="no"
                android:inputType="textShortMessage|textLongMessage|text"
                android:textColorHint="#546E7A" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/add_rss_db"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:singleLine="false"
                android:text="@string/content1"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>